app/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-react
  namespace: frontend
spec:
  selector:
    app: frontend-react
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
